--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     "pages/notice/show",
     "pages/recharge/index",
     "pages/withdraw/index",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/test2/test2"
   ],
   "window": {
     "backgroundTextStyle": "light",
